syntax = "proto3";

package pb;
// option go_package = "path;name";
// . 表示生成的go文件的存放地址./，会自动生成目录的。
// pb_gen 表示生成的go文件所属的包名
option go_package = "./pb_gen;pb_gen";

//RPC接口
service RemoteCodeService {
   rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse) {}
   rpc DownloadRemoteCode(DownloadRemoteCodeRequest) returns (DownloadRemoteCodeResponse) {}
   rpc DownloadAptDeb(DownloadAptDebRequest) returns (DownloadAptDebResponse){}
}

/*
保证每个条目有uid message - struct
 */
message HelloWorldRequest {
   string hello_text = 1;
}

message HelloWorldResponse {
   string thanks_text = 1;
}

message DownloadRemoteCodeRequest {
   string user_id = 1;
   string platform=2;
   bool no_deps=3;
   string only_binary=4;
   string python_version=5;
   string package=6;
   string version=7;
}

message DownloadRemoteCodeResponse {
   string message=1;
   string code=2;
}

message DownloadAptDebRequest{
   string user_id = 1;
   string package=2;
   string version=3;
}

message DownloadAptDebResponse{
   string message=1;
   string code=2;
}